cabal-version:       >=1.10
name:                meteor
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  exposed-modules:     Lib
  default-extensions: ImportQualifiedPost
    TypeApplications
    DeriveAnyClass
    DerivingStrategies
    DeriveGeneric
    RecordWildCards
    TupleSections
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15,
    streaming,
    streaming-bytestring,
    aeson,
    async,
    mwc-random,
    resourcet,
    stm,
    text,
    transformers
  -- hs-source-dirs:
  default-language:    Haskell2010
  

executable meteor
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
  -- hs-source-dirs:
  default-language:    Haskell2010
