cabal-version:       >=1.10
name:                meteor
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  exposed-modules:
    Step0
    Lib
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    TupleSections
    TypeApplications
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15,
    streaming,
    streaming-bytestring,
    aeson,
    async,
    mwc-random,
    resourcet,
    stm,
    text,
    transformers
  hs-source-dirs:
    .
    src/
  default-language:    Haskell2010
  

executable meteor
  main-is:             Main.hs
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    RankNTypes
    -- DerivingVia
    -- GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    TupleSections
    TypeApplications
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15,
     streaming, transformers, async, stm, text, mwc-random, containers
  -- hs-source-dirs:
  default-language:    Haskell2010
